[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "regis"
version = "0.1.0"
description = "Global registry for your objects."
authors = ["Your Name <e.uvarov@me.com>"]


[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.0"
isort = "^5.8.0"


[build]
script = [
    { shell = "sh" }
]

[tool.flake8]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist"
]
max-complexity = 10
max-line-length = 79

[tool.isort]
profile = "black"
line_length = 79
